<resources>
    <string name="app_name">O2O</string>

    <string name="menu_main">首页</string>
    <string name="menu_classify">分类</string>
    <string name="menu_collage">拼团</string>
    <string name="menu_shop">购物车</string>
    <string name="menu_mine">我的</string>

    <!--商品分类-->
    <string-array name="classifition_commodity">
        <item>为您推荐</item>
        <item>国际大牌</item>
        <item>女装</item>
        <item>女鞋</item>
        <item>男装</item>
        <item>男鞋</item>
        <item>内衣</item>
        <item>母婴</item>
        <item>手机</item>
        <item>数码</item>
        <item>家电</item>
        <item>美妆</item>
        <item>箱包</item>
        <item>运动</item>
        <item>户外</item>
        <item>家装</item>
        <item>居家百货</item>
        <item>生鲜</item>
        <item>医药</item>
        <item>洗护</item>
        <item>乐器</item>
    </string-array>

    <string-array name="collage_commoditydetils_arrays">
        <item>商品</item>
        <item>详情</item>
        <item>评价</item>
    </string-array>

    <string-array name="coupon_arrays">
        <item>未使用</item>
        <item>已使用</item>
        <item>已失效</item>
    </string-array>

    <string-array name="mineorder_arrays">
        <item>全部</item>
        <item>待付款</item>
        <item>待发货</item>
        <item>待收货</item>
        <item>待评价</item>
    </string-array>

    <string-array name="evaluate_arrays">
        <item>全部评价</item>
        <item>有图评价</item>
    </string-array>

</resources>
